# OccuSG

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: devcontainer.json  docker-compose-humble.yml  entrypoint.sh  humble.Dockerfile
overrides/: model.sdf  turtlebot3_waffle.urdf  turtlebot3_world.launch.py
src/incremental_dude_ros2/incremental_dude_msgs/: CMakeLists.txt  package.xml
src/incremental_dude_ros2/incremental_dude_msgs/msg/: Region2D.msg  Region2DArray.msg
src/incremental_dude_ros2/incremental_dude_ros2/: CMakeLists.txt  README.md  package.xml
src/incremental_dude_ros2/incremental_dude_ros2/config/: inc_dude_params.yaml
src/incremental_dude_ros2/incremental_dude_ros2/include/: basic_region_tracker.hpp  dude_ros_logging.hpp  inc_decomp.cpp  inc_decomp.hpp  region_geometry_utils.hpp  region_ros_utils.hpp  wrapper.cpp  wrapper.hpp
src/incremental_dude_ros2/incremental_dude_ros2/launch/: inc_dude.launch.py
src/incremental_dude_ros2/incremental_dude_ros2/src/: evaluation.cpp  inc_dude.cpp
src/incremental_dude_ros2/incremental_dude_ros2/test/: inc_decomp_regression_test.cpp  region_tracker_test.cpp
src/point_cloud_generator/: package.xml  setup.cfg  setup.py
src/point_cloud_generator/launch/: depth_to_pointcloud.launch.py  pointcloud_with_mapping.launch.py
src/point_cloud_generator/point_cloud_generator/: depth_to_pointcloud_node.py
src/scene_graph_core/: MANIFEST.in  README.md  notes.md  package.xml  pyproject.toml  setup.cfg  setup.py
src/scene_graph_core/examples/: api_usage_examples.py
src/scene_graph_core/scene_graph_core/: __init__.py
src/scene_graph_core/scene_graph_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scene_graph_core/scene_graph_core/algorithms/: __init__.py
src/scene_graph_core/scene_graph_core/algorithms/spatial/: __init__.py  spatial_index.py
src/scene_graph_core/scene_graph_core/graph_interface/: __init__.py  scene_graph_interface.py  serialization.py
src/scene_graph_core/scene_graph_core/representation/: __init__.py  edge.py  free_space_region.py  geometry.py  graph.py  node.py
src/scene_graph_core/scene_graph_core/serialization/: __init__.py  json_serializer.py
src/scene_graph_core/scene_graph_core/services/: __init__.py  graph_patch.py  query_service.py  update_service.py
src/scene_graph_core/src/scene_graph_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scene_graph_core/tests/: __init__.py  test_baseline_roundtrip.py  test_graph_patch.py  test_interface.py  test_json_serializer.py  test_node_subclasses.py  test_query_edge_filters.py  test_services.py  test_spatial_index.py  test_thread_safety_protection.py
src/scene_graph_ros/: package.xml  setup.cfg  setup.py
src/scene_graph_ros/config/: rviz_mp3d_bag.rviz  rviz_tbot.rviz  scene_graph_pipeline_params.tbot3.yaml  scene_graph_pipeline_params_mp3d.yaml
src/scene_graph_ros/launch/: scene_graph_pipeline.tbot3.launch.py  scene_graph_pipeline_mp3d_bag.launch.py
src/scene_graph_ros/scene_graph_ros/: __init__.py  detection_queue.py  helpers.py  json_export.py  pose_diagnostics_node.py  profiling.py  robot_trajectory.py  scene_graph_region.py  visualization_node.py
src/scene_graph_ros/scene_graph_ros/managers/: __init__.py  free_space_manager.py  object_manager.py  pose_manager.py  region_manager.py  region_util.py  room_manager.py  semantic_signature_utils.py
src/scene_graph_ros/scripts/: aggregate_runtime_profiles.py  collect_hydra_mp3d_eval_tables.py  collect_mp3d_eval_tables.py  evaluate_hydra_mp3d_objects.py  evaluate_hydra_mp3d_regions.py  evaluate_mp3d_objects.py  evaluate_mp3d_regions.py  run_all_region_evals.sh
src/scene_graph_ros/test/: test_free_space_manager.py  test_object_manager.py  test_pose_manager.py  test_region_manager.py  test_region_util.py  test_room_manager.py  test_scene_graph_region.py  test_visualization_node.py
src/semantic_perception/: CMakeLists.txt  package.xml  semantic_perception
src/semantic_perception/config/: config.yaml  rviz.rviz
src/semantic_perception/include/semantic_perception/: semantic_node.hpp
src/semantic_perception/launch/: semantic_perception.launch.py
src/semantic_perception/src/: semantic_node.cpp
