<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scene_graph_core</name>
  <version>0.1.0</version>
  <description>Core library for 3D Scene Graph construction and manipulation in robotics.</description>
  <maintainer email="carlos.cueto@example.com">Carlos Cueto Zumaya</maintainer>
  <license>MIT</license>

  <exec_depend>python3-networkx</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
