<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scene_graph_ros</name>
  <version>0.0.0</version>
  <description>ROS 2 scene graph integration and orchestration pipeline.</description>
  <maintainer email="crcueto25@gmail.com">devuser</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>incremental_dude_ros2</depend>
  <depend>incremental_dude_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>scene_graph_core</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-shapely</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
