<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>incremental_dude_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 port of Incremental Contour-Based Topological Segmentation using DuDe (Dual Space Decomposition)</description>

  <maintainer email="unizar@todo.todo">unizar</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>incremental_dude_msgs</depend>

  <!-- OpenCV bridge -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- System dependencies -->
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
